MDEV-16684 Wrong timestamps on restore from mysqldump --compact

1. Output `SET time_zone` regardless opt_compact;
2. In case of opt_tz_utc is 0 detect timezone from server;
3. When server uses SYSTEM timezone, convert it to UTC offset.

Fixed main.mysqldump-no-binlog instability (MDEV-16752).

Tested on all suites except galera, galera_3nodes, wsrep, rocksdb.